# mutual-review-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
docs/: PUBLISHING_NOTES.md  ROADMAP.md
examples/: claude_desktop_config.json
src/mutual_review_mcp/: __init__.py  cli.py  config.py  reviewer.py  server.py
tests/: test_reviewer.py
